updating-doctors-main-view-styling

--- a/src/components/main-doctors-view-container/DoctorsMainView.css
+++ b/src/components/main-doctors-view-container/DoctorsMainView.css
@@ -1,4 +1,11 @@
+.main-doctors-view-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .main-doctor-container {
   border: 1px solid gray;
   padding: 6px;
+  margin: 8px;
+  width: 15%;
 }
