--- a/src/components/main-hospitals-view-container/HospitalsMainView.css
+++ b/src/components/main-hospitals-view-container/HospitalsMainView.css
@@ -1,4 +1,11 @@
+.main-hospitals-view-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .main-hospital-container {
   border: 1px solid gray;
   padding: 6px;
+  margin: 8px;
+  width: 15%;
 }
