--- a/src/components/nav-bar/Navbar.css
+++ b/src/components/nav-bar/Navbar.css
@@ -1,4 +1,25 @@
 .main-navbar-content-container {
   display: flex;
   justify-content: space-between;
+  background-color: #66bb6a;
+  padding: 24px;
+}
+
+a {
+  text-decoration: none;
+  color: aliceblue;
+}
+
+.navbar-item {
+  padding: 8px;
+  border-radius: 6px;
+  background-color: #2e7d32;
+  transition-duration: 0.4s;
+  display: flex;
+  align-items: baseline;
+}
+
+.navbar-item:hover {
+  background-color: #388e3c;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
